central-lib.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-lib
spec:
  selector:
    matchLabels:
      app: central-lib
  template:
    metadata:
      labels:
        app: central-lib
    spec:
      containers:
      - name: central
        image: fstefanov/cc-projekat:central
        ports:  
          - containerPort: 80

      - name: central-db
        image: postgres
        ports:
          - containerPort: 5432
        volumeMounts: 
          - mountPath: /var/lib/postgresql/data
            name: central-db-vol

      volumes: 
        - name: central-db-vol
          persistentVolumeClaim:
            claimName: central-db-pvc
