central-lib-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-lib-service
spec:
  type: ClusterIP
  selector:
    app: central-lib
  ports:
  - port: 80
    targetPort: 80
