ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
spec:
  rules:
    http:
      paths:
      - path: /local-ns
        pathType: Prefix
        backend:
          service:
            name: local-ns-service
            port:
              number: 80
      - path: /local-bg
        pathType: Prefix
        backend:
          service:
            name: local-bg-service
            port:
              number: 80
      - path: /local-nis
        pathType: Prefix
        backend:
          service:
            name: local-nis-service
            port:
              number: 80
